--- a/app/fe/index.html
+++ b/app/fe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>jason</title>
+    <title>abichi-高端币圈俱乐部</title>
   </head>
   <body>
     <div id="app"></div>
