--- a/app/fe/index.html
+++ b/app/fe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>abichi-币圈高端俱乐部</title>
+    <title>abichi</title>
   </head>
   <body>
     <div id="app"></div>
